--- a/2016/20160404_reporte.md
+++ b/2016/20160404_reporte.md
@@ -1,33 +1,68 @@
 
-Reporte cómputo
-===============
+#Reporte cómputo
 
 Autor: Jaime Forero
+
 Fecha: Compartido en el Consejo del Departamento de Física (Lunes 4 Abril, 2016)
 
-# Cursos computacionales 
+## Cursos computacionales 
 
 * Herramientas Computacionales. 80 estudiantes. 4
   secciones. Dictada por 1 asistente graduado (Juan David Orjuela) y 1
-  profesor de cátedra (Rudy Méndez). 
+  profesor de cátedra (Rudy Méndez). Problemas orientados a
+  aprendizaje de Python y resolución de problemas estadísticos y
+  numéricos sencillos. [Lista de videos tutoriales
+  preparados por los estudiantes](https://www.youtube.com/playlist?list=PLHQtzvthdVM_MGC9dPFKe4hPAwBd_7RJ3).
 
-* Métodos Computacionales. 25 estudiantes. Profesor de cátedra (Germán
-  Chaparro). 
+* Métodos Computacionales. 25 estudiantes. Dictado por un profesor de cátedra (Germán
+  Chaparro). Orientado a métodos numéricos básicos de algebra lineal,
+  ecuaciones diferenciales y Monte Carlo. Lenguajes: C y Python. [Repositorio del
+  curso](https://github.com/ComputoCienciasUniandes/MetodosComputacionales).
 
 * Métodos Computacionales Avanzados. Electiva. 25 estudiantes (13
-  pregrado, 12 postgrado). Profesor de planta (Jaime Forero)
+  pregrado, 12 postgrado). Dictado por un profesor de planta (Jaime
+  Forero). Orientado a ecuaciones diferenciales, machine learning y
+  cómputo masivamente paralelo [Repositorio del
+  curso](https://github.com/ComputoCienciasUniandes/MetodosComputacionalesAvanzados). 
 
-# Cómputo de alto rendimiento
+## Cómputo de alto rendimiento
 
-* 
+* Cluster en funcionamiento desde hace un año. Bastante
+  estable. Actualmente cerca de 1300 cores de procesamiento y 24TB de
+  disco duro.
 
-# Compufísica 
+* Iniciativa en conjunto de Ciencias e Ingeniería. Se planea que quede
+  bajo la dirección de Vicerrectoría de Investigaciones. 
 
-* Cambio de sistema operativo y operación para mejor estabilidad
-  (servidor central). 
+* Retos técnicos: todavía falta instalar cerca de 80TB de espacio de disco.
 
-# Compras
+* Retos de organización: no está clara del todo la gobernabilidad
+  (i.e. ¿cómo se decide si se compran nuevos procesadores o más
+  espacio de disco?). Existe un comité en Ciencias pero no sabemos si
+  hay algo similar en Ingeniería. Interacción con DSIT es lenta y
+  opaca. 
 
-* Escríbanme antes del 18 de Abril con solicitudes de compra de
-  sofware para investigaciones del grupo. 
+* Para nuevas cuentas: ```coordinadorhpc```. Actualmente el
+  coordinador es Juan Pablo Mallarino.
+
+## Compufísica 
+
+* Cambio de sistema operativo (SUSE->Ubuntu) y operación para mejor estabilidad
+  (distribuido -> central). 
+
+* Diseño de cursos intensivos (6 horas, día completo) de Linux y
+  Python para estudiantes de toda la Universidad. Ya hicimos el
+  experimento con este [Python
+  Bootcamp](https://github.com/ComputoCienciasUniandes/python-bootcamp)
+  y con [Software
+  Carpentry](https://github.com/ComputoCienciasUniandes/SoftwareCarpentry)
+  (ambos son formatos de cursos intensivos populares en universidades
+  de Europa y Estados Unidos).
+
+## Compras
+
+* Escríbanme antes del 18 de Abril con lista y descripciones de
+  sofware para investigaciones del grupo.  El departamento de Física
+  podría comprarlos o se podría negociar con el centro de cómputo de
+  alto rendimiento.
 
