--- a/2016/20160404_reporte.md
+++ b/2016/20160404_reporte.md
@@ -61,8 +61,7 @@ Fecha: Compartido en el Consejo del Departamento de Física (Lunes 4 Abril, 2016
 
 ## Compras
 
-* Escríbanme antes del 18 de Abril con lista y descripciones de
-  sofware para investigaciones del grupo.  El departamento de Física
-  podría comprarlos o se podría negociar con el centro de cómputo de
-  alto rendimiento.
+* Para jefes del grupo. Escríbanme antes del 18 de Abril con lista y descripciones de
+  sofware pago para investigaciones del grupo que lideran.  El Departamento de Física
+  podría comprarlos o se podría negociar con el centro de cómputo de alto rendimiento.
 
