--- a/2016/20160404_reporte.md
+++ b/2016/20160404_reporte.md
@@ -59,6 +59,9 @@ Fecha: Compartido en el Consejo del Departamento de Física (Lunes 4 Abril, 2016
   (ambos son formatos de cursos intensivos populares en universidades
   de Europa y Estados Unidos).
 
+* Intención de establecer estos cursos intensivos durante el 2016-20
+  con la ayuda de un monitor dedicado al tema. 
+
 ## Compras
 
 * Para jefes del grupo. Escríbanme antes del 18 de Abril con lista y descripciones de
